# ros2_control_guide

./: README.md  keyboard_control.py
Tutoriales/: Crear un pluguin.md
Tutorials_src/: tuto1.md
Tutorials_src/arduino_interface/: CMakeLists.txt  custom_hardware.xml  package.xml
Tutorials_src/arduino_interface/include/arduino_interface/: arduino_test_HW.hpp  visibility_control.h
Tutorials_src/arduino_interface/src/: arduino_test_HW.cpp
Tutorials_src/real/: CMakeLists.txt  package.xml
Tutorials_src/real/config/: test.yaml
Tutorials_src/real/description/: robot.xacro
Tutorials_src/real/launch/: real.launch.py
Tutorials_src/real/rviz/: robot.rviz
Tutorials_src/sim/: CMakeLists.txt  package.xml
Tutorials_src/sim/config/: diferencial_controllers.yaml
Tutorials_src/sim/launch/: diferencial_spawn.launch.py
Tutorials_src/sim/urdf/: diferencialBot.urdf
ackerman_ctrl_pkg/: CMakeLists.txt  package.xml
ackerman_ctrl_pkg/bringup/config/: ackermann_controller.yaml  mapper_params_online_async.yaml  nav2_params.yaml  real_robot.yaml
ackerman_ctrl_pkg/bringup/launch/: base_ctrl.launch.py  controller.launch.py  nav2_slam_toolbox.launch.py  real.launch.py
ackerman_ctrl_pkg/description/hardware_interface/: ackerman.gzb_control.xacro
ackerman_ctrl_pkg/description/launch/: spawn_ackerman.launch.py  view_robot.launch.py
ackerman_ctrl_pkg/description/urdf/: ackerman.urdf.xacro  bot_real.urdf.xacro
ackerman_ctrl_pkg/src/: purple_suit.cpp  twist_stamped_node.cpp  vicon_odom.cpp
bots_description/: CMakeLists.txt  package.xml
bots_description/ackerman/rviz/: ackerman_view.rviz
bots_description/ackerman/urdf/: ackerman.urdf.xacro
bots_description/common/urdf/: materials.xacro
bots_description/gripper/rviz/: gripper_view.rviz
bots_description/gripper/urdf/: gripper.urdf.xacro
gripper_ctrl_pkg/: CMakeLists.txt  gripper_ctrl_pkg_plugins.xml  package.xml
gripper_ctrl_pkg/bringup/config/: gzb_HI.yaml  test_controller_manager.yaml  test_gripper_controller.yaml
gripper_ctrl_pkg/bringup/launch/: spawn_gzb.launch.py
gripper_ctrl_pkg/description/hardware_interface/: gripper.gzb_control.xacro
gripper_ctrl_pkg/description/launch/: spawn_gripper.launch.py  view_robot.launch.py
gripper_ctrl_pkg/description/urdf/: gripper.urdf.xacro
gripper_ctrl_pkg/include/gripper_ctrl_pkg/: gripper_ctrl.hpp  visibility_control.h
gripper_ctrl_pkg/src/: gripper_ctrl.cpp  gripper_ctrl_params.yaml  guia controller.cpp  src.code-workspace
gripper_ctrl_pkg/test/: test_gripper_controller.cpp  test_load_gripper_controller.cpp
polygon_base/: CMakeLists.txt  package.xml
polygon_plugins/: CMakeLists.txt  package.xml
vicon/: CMakeLists.txt
yb_board/: CMakeLists.txt  package.xml
yb_board/include/yb_board/: Rosmaster.hpp  ackermann_hardware_interface.hpp
yb_board/src/: ackermann_hardware_interface.cpp  beep_node.cpp  rosmaster.cpp  servo_node.cpp
yb_eb/: CMakeLists.txt  custom_hardware.xml  package.xml
yb_eb/include/yb_eb/: eb_serial.hpp  visibility_control.h  yb_eb_HW.hpp
yb_eb/src/: beep_node.cpp  eb_serial.cpp  servo_node.cpp  yb_eb_HW.cpp
